# libKDL

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: libKDL.yml
kdl/builtin/: kestrel_foundation.cpp  kestrel_foundation.hpp  posix_types.cpp  posix_types.hpp  resedit_types.cpp  resedit_types.hpp
kdl/exe/: function_execution.cpp  function_execution.hpp  variable.cpp  variable.hpp
kdl/file/: file_reference.cpp  file_reference.hpp  source_file.cpp  source_file.hpp
kdl/lexer/: lexeme.cpp  lexeme.hpp  lexeme_type.hpp  lexer.cpp  lexer.hpp  lexical_rules.hpp
kdl/parser/: parser.cpp  parser.hpp  result.cpp  result.hpp
kdl/parser/consumer/: consumer.cpp  consumer.hpp  expect.cpp  expect.hpp
kdl/parser/sema/declare/: declare.cpp  declare.hpp  new_resource.cpp  new_resource.hpp  resource_values.cpp  resource_values.hpp
kdl/parser/sema/define/: binary_template.cpp  binary_template.hpp  binary_type.cpp  binary_type.hpp  define.cpp  define.hpp  function.cpp  function.hpp  resource_field.cpp  resource_field.hpp  resource_type.cpp  resource_type.hpp  symbol_list.cpp  symbol_list.hpp
kdl/parser/sema/directive/: author.cpp  author.hpp  copyright.cpp  copyright.hpp  import.cpp  import.hpp  out.cpp  out.hpp  version.cpp  version.hpp
kdl/parser/sema/function/: function_call.cpp  function_call.hpp
kdl/parser/sema/module/: module.cpp  module.hpp
kdl/parser/sema/project/: entity.cpp  entity.hpp  layer.cpp  layer.hpp  project.cpp  project.hpp  scene.cpp  scene.hpp
kdl/report/: reporting.cpp  reporting.hpp
kdl/schema/: module.cpp  module.hpp  module_type.hpp  namespace.cpp  namespace.hpp
kdl/schema/binary_template/: binary_template.cpp  binary_template.hpp  binary_template_field.cpp  binary_template_field.hpp
kdl/schema/binary_type/: binary_type.cpp  binary_type.hpp  char_encoding.hpp  isa.hpp
kdl/schema/binary_types/: binary_type.cpp  binary_type.hpp  isa.hpp
kdl/schema/function/: function.cpp  function.hpp  function_argument.cpp  function_argument.hpp
kdl/schema/project/: entity.cpp  entity.hpp  layer.cpp  layer.hpp  scene.cpp  scene.hpp
kdl/schema/resource/: resource.cpp  resource.hpp
kdl/schema/resource_type/: resource_field.cpp  resource_field.hpp  resource_field_symbol.cpp  resource_field_symbol.hpp  resource_field_value.cpp  resource_field_value.hpp  resource_type.cpp  resource_type.hpp
test/: test_target.cpp
test/suite/lexer_expressions/: input.kdl  result.txt
test/suite/lexer_resource_references/: input.kdl  result.txt  trigger.sh
test/suite/lexer_validate_tokens/: input.kdl  result.txt  trigger.sh
test/suite/schema_module_test/: input.kdl
